[package]
name = "aligners"
version = "0.0.10"
authors = ["Mateusz Gienieczko <mat@gienieczko.com>"]
edition = "2021"
description = "Utilities for alignment guarantees for data."
readme = "./README.md"
license = "MIT"
keywords = ["alignment", "aligned", "align", "byte", "simd"]
categories = ["memory-management", "rust-patterns"]
repository = "https://github.com/V0ldek/aligners"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
lazy_static = "1.4.0"
page_size = "0.4.2"

[dev-dependencies]
anyhow = "1.0.57"

[features]
default = ["simd"]
simd = []

[profile.dev]
lto = false

[profile.release]
lto = "thin"
